<resources>
    <string name="app_name">Firebase Chatroom App</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_email">Type Email</string>
    <string name="type_password">Type Password</string>
    <string name="make_an_account">Make an Account</string>
    <string name="remember_to_log_in">Remember to Log In!</string>
    <string name="sign_out">Sign Out</string>
    <string name="s_chat">\'s Chat</string>
    <string name="please_wait">Please Wait</string>
    <string name="blank">BLANK</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="up_arrow">^</string>
    <string name="make_group">Make Group</string>
    <string name="add_group_members">Add Group Members</string>
    <string name="group_name">Group Name:</string>
</resources>